# ds9-mcp

./: .gitignore  FUTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ds9_mcp/: __init__.py  server.py  xpa.py
tests/: conftest.py  test_integration.py  test_xpa_unit.py
